test/must_fail/api/must_fail_hint_args2.ref
error: hint(message) require exactly 1 arguments but 2 was given
  [must_fail_hint_args2.ngjs:0:0] in <anonymous>()
    hint('asdf', '123');
    ^

hint: function 'hint(message)' was called with 2 arguments
hint: argument #0 was asdf (string)
hint: argument #1 was 123 (string)

Stack trace (1 frames):
  [must_fail_hint_args2.ngjs:0:0] in <anonymous>()
    hint('asdf', '123');
    ^

exit(7)
