test/must_fail/api/must_fail_hint_args2.ngjs
#!/usr/bin/env ngspicejs
// single arg wanted
// linter: ngspicejs-lint
"use strict";

hint('asdf', '123');

